# mojo-standalone

./: .gitignore  BUILD.gn  MOJO_SDK_VERSION  README.md  run_app.sh  run_echo.sh  run_example.sh
apps/apptest/: BUILD.gn  example_apptest.cc  example_client_application.cc  example_client_impl.cc  example_client_impl.h  example_service_application.cc  example_service_application.h  example_service_impl.cc  example_service_impl.h
apps/echo/: BUILD.gn  echo_client.cc  echo_service.cc
examples/: BUILD.gn
examples/apptest/: BUILD.gn  example_apptest.cc  example_client_application.cc  example_client_impl.cc  example_client_impl.h  example_service.mojom  example_service_application.cc  example_service_application.h  example_service_impl.cc  example_service_impl.h
examples/aura_demo/: BUILD.gn  view_manager_init.cc
examples/bitmap_uploader/: BUILD.gn  DEPS  bitmap_uploader.cc  bitmap_uploader.h
examples/browser/: BUILD.gn  browser.cc
examples/content_handler_demo/: BUILD.gn  content_handler_demo.cc
examples/echo/: echo_client.cc  echo_service.cc  echo_service.mojom
examples/embedded_app/: BUILD.gn  DEPS  embedded_app.cc
examples/keyboard/: BUILD.gn  keyboard.cc  keyboard.mojom  keyboard_delegate.h  keyboard_view.cc  keyboard_view.h  keys.cc  keys.h
examples/media_viewer/: BUILD.gn  media_viewer.cc  media_viewer.mojom
examples/nesting_app/: BUILD.gn  nesting_app.cc
examples/pdf_viewer/: BUILD.gn  DEPS  pdf_viewer.cc
examples/png_viewer/: BUILD.gn  DEPS  png_viewer.cc
examples/recursive_content_handler/: BUILD.gn  recursive_content_handler.cc
examples/sample_app/: BUILD.gn  gles2_client_impl.cc  gles2_client_impl.h  sample_app.cc  spinning_cube.cc  spinning_cube.h
examples/surfaces_app/: BUILD.gn  child.mojom  child_app.cc  child_gl_app.cc  child_gl_impl.cc  child_gl_impl.h  child_impl.cc  child_impl.h  embedder.cc  embedder.h  surfaces_app.cc  surfaces_util.cc  surfaces_util.h
examples/wget/: BUILD.gn
examples/window_manager/: BUILD.gn  debug_panel.cc  debug_panel.h  window_manager.cc  window_manager.mojom
examples/wm_flow/: BUILD.gn
examples/wm_flow/app/: app.cc  embedder.mojom
examples/wm_flow/embedded/: DEPS  embedded.cc  embeddee.mojom
examples/wm_flow/wm/: frame_controller.cc  frame_controller.h  wm.cc
mojo/examples/: BUILD.gn
mojo/examples/apptest/: example_apptest.cc
mojo/public/: VERSION  mojo_public.gyp
mojo/public/java/bindings/src/org/chromium/mojo/bindings/: BindingsHelper.java
mojo/public/tools/: download_shell_binary.py
mojo/public/tools/bindings/: mojom_bindings_generator_explicit.gypi  mojom_list_outputs.py
sample_apps/: BUILD.gn
sample_apps/apptest/: example_apptest.cc  example_client_application.cc  example_client_impl.cc  example_client_impl.h  example_service_application.cc  example_service_application.h  example_service_impl.cc  example_service_impl.h
sample_apps/echo/: echo_client.cc  echo_service.cc
tools/: rev_sdk.py  rev_sdk.sh
tools/gn/linux64/: gn
