# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

group("apptest") {
  testonly = true

  deps = [
    ":apptests",
    ":service",
  ]
}

shared_library("service") {
  output_name = "example_service"

  sources = [
    "example_service_application.cc",
    "example_service_application.h",
    "example_service_impl.cc",
    "example_service_impl.h",
  ]

  deps = [
    ":bindings",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/utility"
  ]
}

shared_library("apptests") {
  output_name = "example_apptests"

  testonly = true

  sources = [
    "example_apptest.cc",
    "example_client_application.cc",
    "example_client_application.h",
    "example_client_impl.cc",
    "example_client_impl.h",
  ]

   deps = [
    ":bindings",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/application:test_support_standalone",
   ]

   datadeps = [ ":service", ]
}

mojom("bindings") {
  sources = [ "example_service.mojom" ]
}
