# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

shared_library("png_viewer") {
  sources = [
    "png_viewer.cc"
  ]

  deps = [
    "//examples/bitmap_uploader",
    "//examples/media_viewer:bindings",
    "//mojo/application",
    "//mojo/application:content_handler",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/services/public/cpp/view_manager",
    "//mojo/services/public/interfaces/content_handler",
    "//mojo/services/public/interfaces/network",
    "//ui/gfx",
  ]
}
